--- a/rocketmq-connect/rocketmq-connect-runtime/src/main/resources/connect.conf
+++ b/rocketmq-connect/rocketmq-connect-runtime/src/main/resources/connect.conf
@@ -13,11 +13,24 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
+
+# workerID
+workerId=DEFAULT_WORKER_1
+
 ## Http prot for user to access REST API
 httpPort=8081
+
+# local storePath
+storePathRootDir=~/storeRoot
 
 # Rocketmq namesrvAddr
 namesrvAddr=localhost:9876
 
 # Source or sink connector jar file dir,The default value is rocketmq-connect-sample
-pluginPaths=/home/connect/rocketmq-connect/rocketmq-connect-sample/target
+pluginPaths=/usr/local/connector-plugins/
+
+# Is the current node a Leader ("1" is a leader,null or "0" is a follower)
+isLeader=1
+
+# Is the current node a Candidate (When the leader down, it automatically becomes the leader)
+isCandidate=0
